# FIFA_2026_predictions

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_CARD.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  predict.cmd  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: player_availability.example.csv  player_ratings.example.csv  starting_lineups.example.csv
notebooks/: 01_data_audit.ipynb  02_model_training.ipynb  03_current_predictions.ipynb
src/fifa_predict/: __init__.py  cli.py  config.py  data.py  features.py  interactive.py  models.py  pipeline.py  players.py  predictor.py  schemas.py  teams.py
tests/: test_data.py  test_features.py  test_interactive.py  test_models.py  test_players.py  test_teams.py
