[project]
name = "fifa-predict"
version = "0.1.0"
description = "Leakage-safe FIFA World Cup match prediction notebooks"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
keywords = ["football", "fifa", "machine-learning", "probability", "world-cup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "ipykernel>=6.29",
    "joblib>=1.4",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "numpy>=2.1",
    "pandas>=2.2",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[project.scripts]
fifa-predict = "fifa_predict.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fifa_predict"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fifa_predict"]

[tool.coverage.report]
show_missing = true
skip_covered = true
